--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -5,7 +5,7 @@
     min-width: 100px;
     padding: 9px 16px;
     font-weight: 700;
-    font-size: 1.6rem;
+    font-size: 1.5rem;
     border-radius: 4px;
     cursor: pointer;
     border: 1px solid transparent;
@@ -25,6 +25,12 @@
 .icon + .title,
 .title + .icon {
     margin-left: 8px;
+}
+
+.icon {
+    display: inline-block;
+    width: 24px;
+    text-align: center;
 }
 //button types
 .rounded {
